--- a/HTML1/HTML Tutorial.html
+++ b/HTML1/HTML Tutorial.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>HTML Tutorial</title>
     <style>
-        h1, h2 {
-            text-align:center
+        h1,
+        h2 {
+            text-align: center
         }
 
         .teg {
@@ -21,91 +23,96 @@
             margin-right: 20px;
         }
 
-        .tags{
-            color: rgb(39,160,177);
+        .tags {
+            color: rgb(39, 160, 177);
             background: #dfe7da;
             padding: 3px;
         }
-
-
-
     </style>
 </head>
+
 <body>
-<h1>HTML Tutorial</h1>
-<hr/>
-<h2>What is HTML?</h2>
+    <h1>HTML Tutorial</h1>
+    <hr />
+    <h2>What is HTML?</h2>
 
-<b>Hypertext Markup Language (<abbr title="Hypertext Markup Language">HTML</abbr>)</b> is the
-standard markup language for creating web pages and web applications.
+    <b>Hypertext Markup Language (<abbr title="Hypertext Markup Language">HTML</abbr>)</b> is the
+    standard markup language for creating web pages and web applications.
 
-<p>Web browsers receive <abbr title="Hypertext Markup Language">HTML</abbr> documents from a web
-    server or from local storage and render the documents into multimedia web pages.
-    <abbr title="Hypertext Markup Language">HTML</abbr> describes the structure
-    of a web page semantically and originally included cues for the appearance of the document.
-</p>
+    <p>Web browsers receive <abbr title="Hypertext Markup Language">HTML</abbr> documents from a web
+        server or from local storage and render the documents into multimedia web pages.
+        <abbr title="Hypertext Markup Language">HTML</abbr> describes the structure
+        of a web page semantically and originally included cues for the appearance of the document.
+    </p>
 
-<p>
-    <abbr title="Hypertext Markup Language">HTML</abbr> elements are the building
-    blocks of <abbr title="Hypertext Markup Language">HTML</abbr> pages. With
-    <abbr title="Hypertext Markup Language">HTML</abbr> constructs, images and
-    other objects such as interactive forms may be embedded into the rendered page.
-    <abbr title="Hypertext Markup Language">HTML</abbr> provides a structural semantics
-    for text such as headings, paragraphs, lists, links, quotes and other items.
-    <abbr title="Hypertext Markup Language">HTML</abbr> elements are delineated by tags,
-    written using angle brackets. Tags such as <span class="teg">&lt;img /&gt;</span>
-    and <span class="teg">&lt;input /&gt;</span> directly introduce content
-    into the page. Other tags such as <span class="teg">&lt;p&gt;</span> surround and
-    provide information about document
-    text and may include other tags as sub-elements. Browsers do not display the
-    <abbr title="Hypertext Markup Language">HTML</abbr> tags,
-    but use them to interpret the content of the page.
-<hr/>
-</p>
+    <p>
+        <abbr title="Hypertext Markup Language">HTML</abbr> elements are the building
+        blocks of <abbr title="Hypertext Markup Language">HTML</abbr> pages. With
+        <abbr title="Hypertext Markup Language">HTML</abbr> constructs, images and
+        other objects such as interactive forms may be embedded into the rendered page.
+        <abbr title="Hypertext Markup Language">HTML</abbr> provides a structural semantics
+        for text such as headings, paragraphs, lists, links, quotes and other items.
+        <abbr title="Hypertext Markup Language">HTML</abbr> elements are delineated by tags,
+        written using angle brackets. Tags such as <span class="teg">&lt;img /&gt;</span>
+        and <span class="teg">&lt;input /&gt;</span> directly introduce content
+        into the page. Other tags such as <span class="teg">&lt;p&gt;</span> surround and
+        provide information about document
+        text and may include other tags as sub-elements. Browsers do not display the
+        <abbr title="Hypertext Markup Language">HTML</abbr> tags,
+        but use them to interpret the content of the page.
+    </p>
+    <!--    Ошибка при валидации
+            Error: No p element in scope but a p end tag seen.
+            From line 64, column 1; to line 64, column 4
+            ge.↩<hr/>↩</p>↩↩<h2>
+    -->
+    <hr />
 
-<h2>Markup</h2>
+    <h2>Markup</h2>
 
-<p>
-    <abbr title="Hypertext Markup Language">HTML</abbr> markup consists of several key
-    components, including those called <i>tags</i> (and their <i>attributes</i>),
-    character-based <i>data types, character references and entity references.</i>
-    <abbr title="Hypertext Markup Language">HTML</abbr> tags most commonly come
-    in pairs like <span class="teg">&lt;h1&gt;</span> and <span class="teg">&lt;/h1&gt;</span>,
-    although some represent <i>empty elements</i> and so are unpaired, for example
-    <span class="teg">&lt;img&gt;</span>. The first tag in such a pair is the <i>start tag</i>,
-    and the second is the <i>end tag</i> (they are also called
-    <i>opening tags</i> and <i>closing tags</i>).
+    <p>
+        <abbr title="Hypertext Markup Language">HTML</abbr> markup consists of several key
+        components, including those called <i>tags</i> (and their <i>attributes</i>),
+        character-based <i>data types, character references and entity references.</i>
+        <abbr title="Hypertext Markup Language">HTML</abbr> tags most commonly come
+        in pairs like <span class="teg">&lt;h1&gt;</span> and <span class="teg">&lt;/h1&gt;</span>,
+        although some represent <i>empty elements</i> and so are unpaired, for example
+        <span class="teg">&lt;img&gt;</span>. The first tag in such a pair is the <i>start tag</i>,
+        and the second is the <i>end tag</i> (they are also called
+        <i>opening tags</i> and <i>closing tags</i>).
 
-</p>
+    </p>
 
-<p>>
-    Another important component is the <abbr title="Hypertext Markup Language">HTML</abbr>
-    <i>document type declaration</i>, which triggers standards mode rendering.
-</p>
+    <p>
+        Another important component is the <abbr title="Hypertext Markup Language">HTML</abbr>
+        <i>document type declaration</i>, which triggers standards mode rendering.
+    </p>
 
-<p>
-    The following is an example of the classic "Hello, World!" program:
-</p>
+    <p>
+        The following is an example of the classic "Hello, World!" program:
+    </p>
 
-<p class="kodeCoverWord">
-    &lt;!DOCTYPE html&gt;<br/>
-    &lt;html&gt;<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&lt;head&gt;<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;title><span class="text">This is a title</span>&lt;/title&gt;<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&lt;/head&gt;<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&lt;body&gt;<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;p><span class="text">Hello world!</span>&lt;/p&gt;<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&lt;/body&gt;<br/>
-    &lt;/html&gt;<br/>
+    <p class="kodeCoverWord">
+        &lt;!DOCTYPE html&gt;<br />
+        &lt;html&gt;<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;&lt;head&gt;<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;title><span class="text">This is a
+            title</span>&lt;/title&gt;<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;&lt;/head&gt;<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;&lt;body&gt;<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;p><span class="text">Hello world!</span>&lt;/p&gt;<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;&lt;/body&gt;<br />
+        &lt;/html&gt;<br />
 
-</p>
+    </p>
 
-<p>
-    <b>Tags:</b> <span class="tags">CodingScripting</span> <span class="tags">head</span>
-    <span class="tags">HTML</span> <span class="tags">Introduction to HTML</span>
-    <span class="tags">Landing Links semantics</span> <span class="tags">Structure</span>
-    <span class="tags"> Text </span>
-</p>
+    <p>
+        <b>Tags:</b> <span class="tags">CodingScripting</span> <span class="tags">head</span>
+        <span class="tags">HTML</span> <span class="tags">Introduction to HTML</span>
+        <span class="tags">Landing Links semantics</span> <span class="tags">Structure</span>
+        <span class="tags"> Text </span>
+    </p>
 
 </body>
+
 </html>
