made review homework 3

--- a/HTML2/Spisok.html
+++ b/HTML2/Spisok.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-
         main {
 
             font-family: sans-serif;
         }
+
         .sasha {
             color: grey;
         }
+
         .elton {
             color: blue;
         }
-
-
     </style>
 </head>
+
 <body>
 
-<h2>TAG</h2>
-<p>[taeg]</p>
+    <h2>TAG</h2>
+    <p>[taeg]</p>
 
-<dl>
-    <dt><i>noun</i></dt>
+    <dl>
+        <!-- тег i - плохо. Лучше em, а еще лучше - стиль -->
+        <dt><i>noun</i></dt>
 
-    <dd>
+        <dd>
 
-        <ol>
-            <li>a label attached to someone or something for the purpose of identification or to give other
-                information.<br>
-                <span class="sasha">"he gave his pet a collar with a metal name tag"</span><br>
-                synonyms: <span class="elton">label, ticket, badge, mark, marker, tab, tally, sticker, docket, stub, chit, chitt,
-                    counterfoi, flag, stamp</span><br>
-                <span class="sasha">"a price tag"</span></li>
-            <li>a small piece or part that is attached to a main body.</li>
-        </ol>
+            <ol>
+                <li>a label attached to someone or something for the purpose of identification or to give other
+                    information.<br>
+                    <span class="sasha">"he gave his pet a collar with a metal name tag"</span><br>
+                    synonyms: <span class="elton">label, ticket, badge, mark, marker, tab, tally, sticker, docket, stub,
+                        chit, chitt,
+                        counterfoi, flag, stamp</span><br>
+                    <span class="sasha">"a price tag"</span></li>
+                <li>a small piece or part that is attached to a main body.</li>
+            </ol>
 
-    </dd>
+        </dd>
 
-<dt>verb</dt>
-<dd>
-    <ol>
-        <li>attach a label to.
-            <span class="sasha">"mothers suspected that their babies had been wrongly tagged during an alarm at the hospital"</span><br>
-            synonyms: <span class="elton">label, attach tags to, put a label on, mark, ticket, earmark, identify, docket, flag, indicate</span><br>
-            <span class="sasha">"the bottles were tagged with colour-coded labels"</span></li>
+        <dt>verb</dt>
+        <dd>
+            <ol>
+                <li>attach a label to.
+                    <span class="sasha">"mothers suspected that their babies had been wrongly tagged during an alarm at
+                        the hospital"</span><br>
+                    synonyms: <span class="elton">label, attach tags to, put a label on, mark, ticket, earmark,
+                        identify, docket, flag, indicate</span><br>
+                    <span class="sasha">"the bottles were tagged with colour-coded labels"</span></li>
 
-        <li>add to something, especially as an afterthought or with no real connection.<br>
-            <span class="sasha">"she meant to tag her question on at the end of her remarks"</span><br>
-            synonyms: <span class="elton">add, tack, join, attach, append, affix, annex</span><br>
-            <span class="sasha">"their heads were so large that the rest of their bodies seemed <b>tagged on</b> as an afterthought"</span></li>
-    </ol>
+                <li>add to something, especially as an afterthought or with no real connection.<br>
+                    <span class="sasha">"she meant to tag her question on at the end of her remarks"</span><br>
+                    synonyms: <span class="elton">add, tack, join, attach, append, affix, annex</span><br>
+                    <span class="sasha">"their heads were so large that the rest of their bodies seemed <b>tagged on</b>
+                        as an afterthought"</span></li>
+            </ol>
 
-</dd>
+        </dd>
 
-</dl>
+    </dl>
 
 </body>
+
 </html>
