--- a/HTML3/Task3.html
+++ b/HTML3/Task3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Handsome</title>
+    <!-- Тут я увлекся списыванием  но каждую строчку проработал -->
     <style>
         body{
             color: whitesmoke;
