--- a/HTML3/Task1.html
+++ b/HTML3/Task1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Yummy</title>
     <style>
-
-        .textCenter{
+        .textCenter {
             text-align: center;
             font-family: sans-serif;
         }
@@ -16,81 +16,83 @@
             border: 5px solid grey;
             margin: 10px;
             padding: 30px 25px;
-            border-radius: 100px;
+            border-radius: 30px;
 
         }
+
         footer {
             padding-top: 10px;
             text-align: center;
             clear: left;
         }
-
     </style>
 </head>
+
 <body>
 
 
-<h1 class="textCenter">What do i have in my fridge?</h1>
-<main>
-<div class="textCenter">
-    <img src="img/Food_C247-128.png" alt="paper"/>
-    <p class="textCenter">Paper</p>
-</div>
+    <h1 class="textCenter">What do i have in my fridge?</h1>
+    <main>
+        <div class="textCenter">
+            <img src="img/Food_C247-128.png" alt="paper" />
+            <p class="textCenter">Paper</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C240-128.png" alt="apple"/>
-    <p class="textCenter">Apple</p>
-</div>
+        <div class="textCenter">
+            <img src="img/Food_C240-128.png" alt="apple" />
+            <p class="textCenter">Apple</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C217-128.png" alt="chese"/>
-    <p class="textCenter">Chese</p>
-</div>
+        <div class="textCenter">
+            <img src="img/Food_C217-128.png" alt="chese" />
+            <p class="textCenter">Chese</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C280-1.jpg" alt="Lemonade"/>
-    <p class="textCenter">Lemonade</p>
-</div>
+        <!-- <div class="textCenter">
+            <img src="img/Food_C280-1.jpg" alt="Lemonade" />
+            <p class="textCenter">Lemonade</p>
+        </div> -->
 
-<div class="textCenter">
-    <img src="img/Food_C245-128.png" alt="Corn"/>
-    <p class="textCenter">Corn</p>
-</div>
+        <div class="textCenter">
+            <img src="img/Food_C245-128.png" alt="Corn" />
+            <p class="textCenter">Corn</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C239-128.png" alt="Mushroom"/>
-    <p class="textCenter">Mashroom</p>
-</div>
+        <div class="textCenter">
+            <img src="img/Food_C239-128.png" alt="Mushroom" />
+            <p class="textCenter">Mashroom</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C238-128.png" alt="Garlic"/>
-    <p class="textCenter">Garlic</p>
-</div>
+        <div class="textCenter">
+            <img src="img/Food_C238-128.png" alt="Garlic" />
+            <p class="textCenter">Garlic</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C225-128.png" alt="Beef"/>
-    <p class="textCenter">Beef</p>
-</div>
+        <div class="textCenter">
+            <img src="img/Food_C225-128.png" alt="Beef" />
+            <p class="textCenter">Beef</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C205-128.png" alt="Fish"/>
-    <p class="textCenter">Fish</p>
-</div>
+        <div class="textCenter">
+            <img src="img/Food_C205-128.png" alt="Fish" />
+            <p class="textCenter">Fish</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C203-128.png" alt="Eggs"/>
-    <p class="textCenter">Eggs</p>
-</div>
+        <div class="textCenter">
+            <img src="img/Food_C203-128.png" alt="Eggs" />
+            <p class="textCenter">Eggs</p>
+        </div>
 
-<div class="textCenter">
-    <img src="img/Food_C235-128.png" alt="Coriander"/>
-    <p class="textCenter">Coriander</p>
-</div>
-</main>
-<footer>
-    <hr/>
-    <h2>...that's all...</h2>
-</footer>
+        <div class="textCenter">
+            <img src="img/Food_C235-128.png" alt="Coriander" />
+            <p class="textCenter">Coriander</p>
+        </div>
+    </main>
+    <footer>
+        <hr />
+        <h2>...that's all...</h2>
+    </footer>
 
 </body>
+
 </html>
