Исправлено меню во втором задании. Третьего задания не нашел

--- a/HTML4/2.html
+++ b/HTML4/2.html
@@ -1,146 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Icons</title>
 
     <style>
-        main{
+        main {
             height: 100%;
         }
 
-        .backgrondMenu{
+        .backgrondMenu {
+
+            overflow: hidden;
+            left: 0;
+            top: 0;
+            margin: 0;
+            padding: 0;
             transition: 1s;
             width: 90px;
             background-color: gray;
             position: fixed;
-            height: 100%;
-
-        }
-        .backgrondMenu:hover {
+            height: 100vh;
             transition: 1s;
-            width: 230px;
-            height: 100%;
-            background-color: gray;
         }
+
+        .backgrondMenu:hover {
+            width: 230px;
+        }
+
         img {
+            display: inline-block;
             width: 60px;
             height: 60px;
             padding-left: 15px;
             position: relative;
             top: 22px;
         }
+
         .backgrondMenu div {
+            width: 230px;
             background-color: gray;
             padding-bottom: 30px;
             cursor: pointer;
-
         }
+
         .backgrondMenu div:hover {
             background-color: darkgrey;
         }
+
         span {
+            display: inline-block;
+            width: 100px;
             padding-left: 20px;
             color: white;
             font-family: sans-serif;
 
         }
-        .backgrondMenu span {
+
+        /* .backgrondMenu span {
             display: none;
-        }
-        .backgrondMenu:hover span {
+        } */
+
+        /* .backgrondMenu:hover span {
             display: inline;
-        }
+        } */
 
-
-
-        h3{
-            padding-left: 15px;
-            padding-top: 20px;
-        }
-
-        .text{
+        .text {
             height: 100%;
             padding-top: 20px;
             padding-left: 100px;
         }
 
-
+        .backgrondMenu h3 {
+            padding-left: 15px;
+            padding-top: 20px;
+            font-weight: normal;
+            font-family: sans-serif;
+            color: white;
+            text-transform: uppercase;
+        }
     </style>
 
 </head>
 
 <body>
 
-<main>
+    <main>
 
-    <div class="backgrondMenu">
-        <div><h3>Menu</h3></div>
-        <div><img src="img/edit.png" alt="edit" /><span>EDIT</span></div>
-        <div><img src="img/favorites.png" alt="favorites" /><span>FAVORITES</span></div>
-        <div><img src="img/history.png" alt="history" /><span>HISTORY</span></div>
-        <div><img src="img/security.png" alt="security" /><span>SECURITY</span></div>
-        <div><img src="img/settings.png" alt="settings" /><span>SETTINGS</span></div>
-    </div>
-<div class="text">
-    <h2>Что такое Lorem Ipsum?</h2>
-    Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
-    "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию
-    размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без
-    заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили
-    публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной
-    вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
+        <div class="backgrondMenu">
+            <h3>Menu</h3>
+            <div><img src="img/edit.png" alt="edit" /><span>EDIT</span></div>
+            <div><img src="img/favorites.png" alt="favorites" /><span>FAVORITES</span></div>
+            <div><img src="img/history.png" alt="history" /><span>HISTORY</span></div>
+            <div><img src="img/security.png" alt="security" /><span>SECURITY</span></div>
+            <div><img src="img/settings.png" alt="settings" /><span>SETTINGS</span></div>
+        </div>
+        <div class="text">
+            <h2>Что такое Lorem Ipsum?</h2>
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+            "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую
+            коллекцию
+            размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно
+            пережил без
+            заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время
+            послужили
+            публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы
+            электронной
+            вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
 
-    <h2>Почему он используется?</h2>
-    Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют
-    потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и
-    пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш
-    текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по
-    умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё
-    дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии
-    появились по ошибке, некоторые - намеренно (например, юмористические варианты).
+            <h2>Почему он используется?</h2>
+            Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum
+            используют
+            потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение
+            букв и
+            пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь
+            ваш
+            текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по
+            умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё
+            дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые
+            версии
+            появились по ошибке, некоторые - намеренно (например, юмористические варианты).
 
-    <h2>Откуда он появился?</h2>
-    Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его
-    корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард
-    МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem
-    Ipsum, "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый
-    первоисточник Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра
-    и зла"), написанной Цицероном в 45 году н.э. Этот трактат по теории этики был очень популярен в эпоху
-    Возрождения. Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в
-    разделе 1.10.32
-    Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33
-    "de Finibus Bonorum et Malorum" Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
-    <h2>Что такое Lorem Ipsum?</h2>
-    Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
-    "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию
-    размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без
-    заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили
-    публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной
-    вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
+            <h2>Откуда он появился?</h2>
+            Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его
+            корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард
+            МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в
+            Lorem
+            Ipsum, "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл
+            неоспоримый
+            первоисточник Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах
+            добра
+            и зла"), написанной Цицероном в 45 году н.э. Этот трактат по теории этики был очень популярен в эпоху
+            Возрождения. Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в
+            разделе 1.10.32
+            Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33
+            "de Finibus Bonorum et Malorum" Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
+            <h2>Что такое Lorem Ipsum?</h2>
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной
+            "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую
+            коллекцию
+            размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно
+            пережил без
+            заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время
+            послужили
+            публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы
+            электронной
+            вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
 
-    <h2>Почему он используется?</h2>
-    Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют
-    потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и
-    пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш
-    текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по
-    умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё
-    дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии
-    появились по ошибке, некоторые - намеренно (например, юмористические варианты).
+            <h2>Почему он используется?</h2>
+            Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum
+            используют
+            потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение
+            букв и
+            пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь
+            ваш
+            текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по
+            умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё
+            дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые
+            версии
+            появились по ошибке, некоторые - намеренно (например, юмористические варианты).
 
-    <h2>Откуда он появился?</h2>
-    Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его
-    корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард
-    МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem
-    Ipsum, "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый
-    первоисточник Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра
-    и зла"), написанной Цицероном в 45 году н.э. Этот трактат по теории этики был очень популярен в эпоху
-    Возрождения. Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в
-    разделе 1.10.32
-    Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33
-    "de Finibus Bonorum et Malorum" Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
-</div>
-</main>
+            <h2>Откуда он появился?</h2>
+            Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его
+            корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард
+            МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в
+            Lorem
+            Ipsum, "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл
+            неоспоримый
+            первоисточник Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах
+            добра
+            и зла"), написанной Цицероном в 45 году н.э. Этот трактат по теории этики был очень популярен в эпоху
+            Возрождения. Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в
+            разделе 1.10.32
+            Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33
+            "de Finibus Bonorum et Malorum" Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.
+        </div>
+    </main>
 
 </body>
+
 </html>
