--- a/HTML4/1.html
+++ b/HTML4/1.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>1</title>
     <style>
-
-
-        table{
+        table {
             overflow: hidden;
             table-layout: fixed;
         }
+
         th {
-            background-color:  #3ce7ff;
+            background-color: #3ce7ff;
             width: 100px;
             height: 50px;
 
@@ -36,101 +36,251 @@
             overflow: hidden;
             table-layout: fixed;
         }
-        thead{
-            position:fixed;
+
+        thead {
+            position: fixed;
             left: 10px;
-            top:0;
+            top: 0;
         }
-
-
-
-
     </style>
 </head>
+
 <body>
 
-<table cellspacing="0">
-    <thead>
-    <tr>
-        <th></th>
-        <th>Header 1</th> <th>Header 2</th> <th>Header 3</th> <th>Header 4</th> <th>Header 5</th>
-        <th>Header 6</th> <th>Header 7</th> <th>Header 8</th>
-    </tr>
-    </thead>
+    <table cellspacing="0">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Header 1</th>
+                <th>Header 2</th>
+                <th>Header 3</th>
+                <th>Header 4</th>
+                <th>Header 5</th>
+                <th>Header 6</th>
+                <th>Header 7</th>
+                <th>Header 8</th>
+            </tr>
+        </thead>
 
-    <tbody>
-    <tr>
-        <th>Line 1</th> <td>1</td><td>1</td> <td>1</td> <td>1</td> <td>1</td>  <td>1</td>  <td>1</td>  <td>1</td>
-    </tr>
+        <tbody>
+            <tr>
+                <th>Line 1</th>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+            </tr>
 
-    <tr>
-        <th>Line 2</th> <td>2</td> <td>2</td> <td>2</td> <td>2</td> <td>2</td> <td>1</td>  <td>1</td>  <td>1</td>
-    </tr>
+            <tr>
+                <th>Line 2</th>
+                <td>2</td>
+                <td>2</td>
+                <td>2</td>
+                <td>2</td>
+                <td>2</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+            </tr>
 
-    <tr>
-        <th>Line 3</th> <td>3</td> <td>3</td> <td>3</td> <td>3</td> <td>3</td>  <td>1</td>  <td>1</td>  <td>1</td>
-    </tr>
+            <tr>
+                <th>Line 3</th>
+                <td>3</td>
+                <td>3</td>
+                <td>3</td>
+                <td>3</td>
+                <td>3</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+            </tr>
 
-    <tr>
-        <th>Line 4</th> <td>4</td> <td>4</td> <td>4</td> <td>4</td> <td>4</td> <td>1</td>  <td>1</td>  <td>1</td>
-    </tr>
+            <tr>
+                <th>Line 4</th>
+                <td>4</td>
+                <td>4</td>
+                <td>4</td>
+                <td>4</td>
+                <td>4</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+            </tr>
 
-    <tr>
-        <th>Line 5</th> <td>5</td> <td>5</td> <td>5</td> <td>5</td> <td>5</td> <td>1</td>  <td>1</td>  <td>1</td>
-    </tr>
-    <tr>
-        <th>Line 6</th> <td>6</td> <td>6</td> <td>6</td> <td>6</td> <td>6</td> <td>1</td>  <td>1</td>  <td>1</td>
-    </tr>
-    <tr>
-        <th>Line 7</th> <td>7</td> <td>7</td> <td>7</td> <td>7</td> <td>7</td> <td>1</td>  <td>1</td>  <td>1</td>
-    </tr>
-    <tr>
-        <th>Line 8</th> <td>8</td> <td>8</td> <td>8</td> <td>8</td> <td>8</td> <td>1</td>  <td>1</td>  <td>1</td>
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            <tr>
+                <th>Line 5</th>
+                <td>5</td>
+                <td>5</td>
+                <td>5</td>
+                <td>5</td>
+                <td>5</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 6</th>
+                <td>6</td>
+                <td>6</td>
+                <td>6</td>
+                <td>6</td>
+                <td>6</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 7</th>
+                <td>7</td>
+                <td>7</td>
+                <td>7</td>
+                <td>7</td>
+                <td>7</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 8</th>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr><tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    <tr>
-        <th>Line 9  </th> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>9</td> <td>1</td>  <td>1</td>  <td>1</td>
+            </tr>
+            <tr>
+                <th>Line 9 </th>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>9</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
 
-    </tr>
-    </tbody>
+            </tr>
+        </tbody>
 
 
 
-</table>
+    </table>
 
 </body>
+
 </html>
